# mxcore

include/compat/: tr1_memory.h
mxasync/: actor.hpp  base_messages.hpp  mq.hpp  queue.hpp
mxprops/: CMakeLists.txt  io.h  mxprops.h  pathprop.h
mxprops/src/: io.cpp  mxprops.cpp
mxprops/test/: mxprops_test.cpp
